FixingAPI

--- a/style.css
+++ b/style.css
@@ -15,8 +15,12 @@ html{
 }
 
 p{
-    color: #1A9FFF;
-
+    color: white;
+    text-shadow:
+    -1px -1px 0 #000,  
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+     1px 1px 0 #000;
     margin: 20px;
     padding: 20px;
     text-align: center;
@@ -26,35 +30,50 @@ p{
 body{
     background: #3D4450;
     color: white;
-    background: linear-gradient(0deg, #3d4450 0%, #0E141B 100%);
+    background: linear-gradient( to bottom right, #061938, #1379ab );
     min-height: 100%;
 }
 
 h1{
-    color: #1A9FFF;
+    color: white;
+    text-shadow:
+    -2px -2px 0 #000,  
+    2px -2px 0 #000,
+    -2px 2px 0 #000,
+     2px 2px 0 #000;
     font-size: 100px;
     text-align: center;
     margin: 0;
-    background: black;
 }
 
 
 .Button{
     
     background-color: #417a9b; /* Dusty Blue*/
+    position: relative; bottom: 5px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
     border: none;
-    color: white;
-    padding: 15px 32px;
+    border-radius: 10px;
+    color: black;
     text-decoration: none;
     display: inline-block;
-    font-size: 16px;
+    font-size: 20px;
+    width: fit-content;
+    height: 20px;
+    margin-right: 20px;
+    
+
      
 }
 ::placeholder{
     color: #0E141B;
 }
 .input {
-    background: #417a9b;
+    display: flex;
+    justify-content: center;
+    /* background: #417a9b; */
     color: #0E141B;
     text-align: center;
     height: 50px;
@@ -63,14 +82,19 @@ h1{
 
 }
 #LoginInput{
- position: relative; bottom: 50px;
- background: transparent;
+    display: flex;
+    justify-content: center;
+ position: relative; bottom: 5px;
+ background: #417a9b;
+ border-color: #3D4450;
  font-size: large;
  width: 500px;
  border-radius: 10px;
  
 }
 img{
+    display: flex;
+    justify-content: center;
     position: relative; bottom: 17px;
     position: relative; right: 10px;
     width: 80px;
